--- a/src/index.template.html
+++ b/src/index.template.html
@@ -7,7 +7,7 @@
     <meta
       http-equiv="Content-Security-Policy"
       content="style-src 'self' 'unsafe-inline'; connect-src self * 'unsafe-inline' blob: data: gap:;">
-    <link rel="stylesheet" href="./app.css" />
+    <link rel="stylesheet" href="index.css" />
     <style>
       html, body {
         width: 100%;
@@ -33,6 +33,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/app/index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
