--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,7 +14,7 @@
         color: white;
         background: #e67e22;
       }
-      
+
       html, body {
         width: 100%;
         height: 100% !important;
@@ -34,6 +34,58 @@
         font-family: Verdana, Geneva, sans-serif;
         letter-spacing: .5px;
         background-color: #f4f5f6;
+      }
+      
+      .Resizer {
+        background: #bbb;
+        z-index: 100;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -moz-background-clip: padding;
+        -webkit-background-clip: padding;
+        background-clip: padding-box;
+      }
+
+      .Resizer.horizontal {
+        height: 11px;
+        margin: -5px 0;
+        border-top: 5px solid rgba(255, 255, 255, 0);
+        border-bottom: 5px solid rgba(255, 255, 255, 0);
+        cursor: row-resize;
+        width: 100%;
+      }
+
+      .Resizer.horizontal:hover {
+        border-top: 5px solid rgba(0, 0, 0, 0.5);
+        border-bottom: 5px solid rgba(0, 0, 0, 0.5);
+      }
+
+      .Resizer.vertical {
+        position: relative;
+        width: 20px;
+        margin: 0 -12px 0 0;
+        border-left: 5px solid #f3f5f6;
+        border-right: 5px solid #f3f5f6;
+        cursor: col-resize;
+      }
+
+      .Resizer.vertical:before {
+        position: absolute;
+        top: 40%;
+        width: 15px;
+        height: 50px;
+        left: 5px;
+      }
+
+      .Resizer.vertical:hover {
+        background: #999;
+      }
+      .Resizer.disabled {
+        cursor: not-allowed;
+      }
+      .Resizer.disabled:hover {
+        border-color: transparent;
       }
     </style>
   </head>
