--- a/src/index.template.html
+++ b/src/index.template.html
@@ -36,6 +36,7 @@
         background-color: #f3f2f1;
         background-image: linear-gradient(#e4e3e3 .1em, transparent .1em), linear-gradient(90deg, #e4e3e3 .1em, transparent .1em);
         background-size: .5em .5em;
+        overflow: hidden;
       }
 
       pre {
