--- a/src/index.template.html
+++ b/src/index.template.html
@@ -34,7 +34,7 @@
         font-family: Verdana, Geneva, sans-serif;
         letter-spacing: .5px;
         background-color: #f3f2f1;
-        background-image: linear-gradient(#e4e3e3 .1em, transparent .1em), linear-gradient(90deg, #e4e3e3 .1em, transparent .1em);
+        background-image: linear-gradient(#efeeee .1em, transparent .1em), linear-gradient(90deg, #efeeee .1em, transparent .1em);
         background-size: .5em .5em;
         overflow: hidden;
       }
